--- a/assets/pages/styles/login.css
+++ b/assets/pages/styles/login.css
@@ -233,13 +233,18 @@
     bottom: 70px;
     cursor: pointer;
 }
-#signUpNameError, #signUpEmailError, #numberError, #signUpPassError{
+#signUpNameError, #signUpEmailError, #numberError{
     position: relative;
     bottom: 20px;
     left: 50px;
     color: red;
 }
-
+#signUpPassError{
+    position: relative;
+    bottom: 35px;
+    left: 50px;
+    color: red;
+}
 #signUpCpassError{
     position: relative;
     bottom: 40px;
