--- a/assets/pages/styles/home.css
+++ b/assets/pages/styles/home.css
@@ -32,8 +32,12 @@ header {
     margin-right: 350px;
     margin-top: 35px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
+#myBooking:hover{
+    background-color: #de3b33;
+}
 #profile {
     padding: 0.5rem 0.5rem;
     border-radius: 50%;
@@ -260,6 +264,11 @@ body {
     border-radius: 0px 20px 20px 0px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     cursor: pointer;
+    transition: background-color 0.3s ease; /* Add transition for color change */
+}
+
+#search_bus_button:hover {
+    background-color: #de3b33;
 }
 
 .profileManage {
