--- a/assets/pages/styles/login.css
+++ b/assets/pages/styles/login.css
@@ -4,26 +4,31 @@
     padding: 0;
     box-sizing: border-box;
 }
-.login-container{
+
+.login-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
-} 
-#loginHeading{
+}
+
+#loginHeading {
     margin-bottom: 50px;
     margin-left: 120px;
     font-family: "Archivo", sans-serif;
 }
-#login_form, #sign_up_form{
+
+#login_form,
+#sign_up_form {
     display: flex;
     flex-direction: column;
     background-color: white;
     padding: 70px 70px;
     box-shadow: 2px 5px 20px rgb(72, 70, 70);
 }
-#Bus_Logo{
+
+#Bus_Logo {
     width: 200px;
     height: 100px;
     position: relative;
@@ -31,7 +36,9 @@
     left: 80px;
 }
 
-#Name_inputs, #Email_inputs, #password_inputs{
+#Name_inputs,
+#Email_inputs,
+#password_inputs {
     width: 300px;
     border: none;
     font-size: 20px;
@@ -40,27 +47,33 @@
     padding: 10px 0px;
 }
 
-#Name_inputs, #Email_inputs, #password_inputs:focus{
+#Name_inputs,
+#Email_inputs,
+#password_inputs:focus {
     outline: 0;
 }
-#userName_Logo{
+
+#userName_Logo {
     height: 30px;
     width: 30px;
     position: relative;
     bottom: 30px;
 }
-#email_Logo{
+
+#email_Logo {
     height: 30px;
     width: 30px;
     position: relative;
     bottom: 30px;
 }
-#password_Logo{
+
+#password_Logo {
     height: 35px;
     width: 35px;
     position: relative;
     bottom: 30px;
 }
+
 .eye-icon {
     position: relative;
     left: 320px;
@@ -68,7 +81,7 @@
     cursor: pointer;
 }
 
-#login{
+#login {
     width: 100%;
     height: 40px;
     border-radius: 5px;
@@ -78,25 +91,34 @@
     border: 1px solid rgb(33, 150, 243);
     cursor: pointer;
     margin-top: 10px;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+    /* Smooth transition for background and border colors */
 }
 
-#go_sign_up{
+#login:hover {
+    background-color: rgb(0, 109, 198);
+    border-color: rgb(0, 109, 198);
+}
+
+
+#go_sign_up {
     position: relative;
     top: 30px;
     left: 60px;
     font-size: 18px;
 }
-#go_sign_up a{
+
+#go_sign_up a {
     margin-left: 10px;
 }
 
 
-#signUpError{
+#signUpError {
     color: red;
     margin-top: 15px;
     margin-left: 105px;
     font-size: 20px;
-    
+
 }
 
 #loginError {
@@ -107,50 +129,61 @@
     width: 100%;
 }
 
-#emailError, #nameError{
+#emailError,
+#nameError {
     color: red;
     position: relative;
     bottom: 15px;
     left: 50px;
 }
-#passwordError{
+
+#passwordError {
     color: red;
     position: relative;
     bottom: 35px;
     left: 50px
 }
+
 /* Sign up page */
 
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anton&family=Anton+SC&family=Archivo:ital,wght@0,100..900;1,100..900&family=Dangrek&family=Foldit:wght@100..900&family=Kalnia+Glaze:wght@100..700&family=Kaushan+Script&family=Lobster&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Shrikhand&family=Signika+Negative:wght@300..700&family=Yeseva+One&display=swap');
 
-.sign_up_container{
+.sign_up_container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 95vh;
-} 
-
-#Name_input, #Email_input, #Number_input, #password_input {
-    width: 300px;
-    border: none;
-    font-size: 20px;
-    border-bottom: 1.5px solid black;
-    margin-left: 50px;
-    padding:  0px 0px 3px 3px ;
 }
 
-#Cpassword_input{
+#Name_input,
+#Email_input,
+#Number_input,
+#password_input {
     width: 300px;
     border: none;
     font-size: 20px;
     border-bottom: 1.5px solid black;
     margin-left: 50px;
-    padding:  0px 0px 3px 3px ;
+    padding: 0px 0px 3px 3px;
+}
+
+#Cpassword_input {
+    width: 300px;
+    border: none;
+    font-size: 20px;
+    border-bottom: 1.5px solid black;
+    margin-left: 50px;
+    padding: 0px 0px 3px 3px;
     position: relative;
     bottom: 10px;
 }
-#Name_input, #Email_input, #Number_input, #password_input, #Cpassword_input:focus {
+
+#Name_input,
+#Email_input,
+#Number_input,
+#password_input,
+#Cpassword_input:focus {
     outline: 0;
 
 }
@@ -165,6 +198,13 @@
     background-color: rgb(33, 150, 243);
     border: 1px solid rgb(33, 150, 243);
     cursor: pointer;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+    /* Smooth transition for background and border colors */
+}
+
+#Sign_up:hover {
+    background-color: rgb(0, 109, 198);
+    border-color: rgb(0, 109, 198);
 }
 
 #sign_up_heading {
@@ -235,30 +275,36 @@
     cursor: pointer;
 }
 
-.confirm_pass_eye-icon{
+.confirm_pass_eye-icon {
     position: relative;
     left: 320px;
     bottom: 70px;
     cursor: pointer;
 }
-#signUpNameError, #signUpEmailError, #numberError{
+
+#signUpNameError,
+#signUpEmailError,
+#numberError {
     position: relative;
     bottom: 20px;
     left: 50px;
     color: red;
 }
-#signUpPassError{
+
+#signUpPassError {
     position: relative;
     bottom: 35px;
     left: 50px;
     color: red;
 }
-#signUpCpassError{
+
+#signUpCpassError {
     position: relative;
     bottom: 40px;
     left: 50px;
     color: red;
 }
+
 .hidden {
     display: none;
 }
