--- a/assets/pages/styles/busList.css
+++ b/assets/pages/styles/busList.css
@@ -45,7 +45,7 @@ header {
     width: 1500px;
     position: absolute;
     top: 250px;
-    right: 20px;
+    right: 30px;
 }
 
 /* Individual bus item styling */
@@ -290,41 +290,31 @@ header {
     display: none;
 }
 
-#display_container {
-    /* background-color: aqua; */
-    font-size: 20px;
-    display: flex;
-    flex-direction: row;
-    gap: 30px;
-    position: relative;
-    top: 50px;
-    left: 100px;
-}
-
-
-/* Display container */
-#display_container {
+#displayNames #display_container{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     gap: 30px;
-    margin-bottom: 10px;
+    margin-left: 50px;
 }
 
-#displayFromContainer,
-#displayToContainer,
-#displayDateContainer {
+
+#displayFrom, #displayTo, #displayDate {
     background-color: #fff;
     padding: 10px;
     border-radius: 6px;
     color: #010101;
     font-size: 1.1rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    position: relative;
-    bottom: 10px;
     font-weight: bold;
+    margin-top: 30px;
+
+
 }
 
+#nevArrow{
+    margin-top: 45px;
+}
 /* Modify button styling */
 #modifyButton {
     background-color: rgb(248, 74, 91);
@@ -334,10 +324,9 @@ header {
     font-size: 1rem;
     border-radius: 6px;
     cursor: pointer;
-    position: relative;
-    left: 550px;
-    bottom: 7px;
     font-weight: bold;
+    margin-top: 33px;
+    margin-left: 40px;
     transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
@@ -347,16 +336,18 @@ header {
 
 #modifyButton:active {
     transform: scale(0.97);
-}
+} 
 
 /* Dynamic form styling */
 #dynamicModifyForm {
-    position: relative;
-    top: 20px;
+    position: absolute;
+    top: 100px;
     left: 500px;
-    background-color: #d6d5d5;
+    background-color: #cccccc;
     padding: 50px;
     border-radius: 8px;
+    width: 400px;
+    height: 400px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
