--- a/assets/pages/styles/login.css
+++ b/assets/pages/styles/login.css
@@ -158,7 +158,6 @@
 
 #Name_input,
 #Email_input,
-#Number_input,
 #password_input {
     width: 300px;
     border: none;
@@ -166,6 +165,32 @@
     border-bottom: 1.5px solid black;
     margin-left: 50px;
     padding: 0px 0px 3px 3px;
+}
+#Number_input{
+    width: 250px;
+    border: none;
+    font-size: 20px;
+    border-bottom: 1.5px solid black;
+    margin-left: 55px;
+    padding: 0px 0px 3px 3px;
+}
+
+.input-prefix{
+    position: relative;
+    left: 55px;
+    font-size: 1.5rem;
+    border-bottom: 1.5px solid black;
+    top: 0.5px;
+    padding: 2px;
+}
+
+#mobileLine{
+    width: 50px;
+    height: 1.5px;
+    background-color: black;
+    position: relative;
+    bottom: 61.5px;
+    left: 50px;
 }
 
 #Cpassword_input {
