--- a/assets/pages/styles/home.css
+++ b/assets/pages/styles/home.css
@@ -32,6 +32,7 @@ header {
     margin-right: 350px;
     margin-top: 35px;
     cursor: pointer;
+    font-family: 'Poppins', sans-serif;
     transition: background-color 0.3s ease;
 }
 
@@ -166,6 +167,7 @@ body {
 .date_input label {
     margin-bottom: 10px;
     font-size: 20px;
+    font-family: 'Poppins', sans-serif;
 }
 
 #date {
@@ -194,12 +196,17 @@ body {
     position: relative;
     display: flex;
     flex-direction: column;
-    right: 170px; /* Adjust positioning if needed */
+    right: 170px; 
+    bottom: 5px;
+    
 }
 
 #from_input label {
     font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+    
 }
+
 
 #from {
     border: 1px solid rgb(1, 1, 1);
@@ -233,11 +240,12 @@ body {
     flex-direction: column;
     position: relative;
     right: 239px;
+    bottom: 5px;
 }
 
 #to_input label {
     font-size: 20px;
-
+    font-family: 'Poppins', sans-serif;
 }
 
 #to {
@@ -353,3 +361,34 @@ body {
 }
 
 
+/* Style for the message container */
+#message-container {
+    margin-top: 40px;
+    width: fit-content;
+    margin-left: 550px;
+    overflow: hidden; /* Prevent content overflow */
+    height: 0; /* Initially collapsed */
+    opacity: 0; /* Initially transparent */
+    padding: 0; /* No padding initially */
+    display: none; /* Hidden by default */
+    transition: opacity 0.5s ease, height 0.5s ease, padding 0.5s ease; /* Smooth transitions */
+}
+
+/* Style for the error message */
+#message-container div {
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+    font-family: 'Arial', sans-serif;
+    background-color: rgb(248, 74, 91);
+    padding: 10px;
+    border: 1px solid rgb(248, 74, 91);
+    border-radius: 5px;
+}
+
+/* Expanded state of the container */
+#message-container.expand {
+    display: block; /* Make it visible */
+    height: auto; /* Expand height to fit content */
+    opacity: 1; /* Fade in */
+    padding: 10px 0; /* Add padding */
+}
