--- a/assets/pages/styles/busList.css
+++ b/assets/pages/styles/busList.css
@@ -487,11 +487,12 @@ header {
   
   /* Style for the message container */
 #message-container {
-    margin-top: 30px;
+    position: fixed;
+    top: 530px;
     width: fit-content;
-    margin-right: 400px;
+    left: 550px;
     overflow: hidden; /* Prevent content overflow */
-    height: 0; /* Initially collapsed */
+    height: 30px; /* Initially collapsed */
     opacity: 0; /* Initially transparent */
     padding: 0; /* No padding initially */
     visibility: hidden; /* Hidden by default */
